# sfml-skel

./: .gitmodules  CMakeLists.txt  README.md
src/: console.cpp  console.h  main.cpp  statemanager.cpp  statemanager.h  teststate.cpp  teststate.h
